--- a/pkg/rules/unexpected-file-access/unexpected-file-access.yaml
+++ b/pkg/rules/unexpected-file-access/unexpected-file-access.yaml
@@ -5,20 +5,18 @@ metadata:
   namespace: kubescape
   labels:
     app: kubescape
-    tier: security
 spec:
   - name: "Unexpected file access"
     enabled: true
     id: "R0002"
     description: "Detects unexpected file access that is not in the baseline"
     expressions:
-      message: "Unexpected file access detected: event.Comm with PID event.Pid"
-      unique_id: "event.Comm_event.FullPath"
+      message: "'Unexpected file access detected: ' + data.event.Comm + ' with PID ' + string(data.event.Pid) + ' to ' + data.event.FullPath"
+      unique_id: "data.event.Comm + '_' + data.event.FullPath"
       rule_expression:
         - event_type: "open"
-          expression: "!profile_checks.open_dynamic_path"
-    profile_dependency:
-      required: 0
+          expression: "!data.profile_checks.open_dynamic_path"
+    profile_dependency: 0
     severity: 1
     support_policy: false
     tags:
