--- a/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
+++ b/pkg/rules/r0002-unexpected-file-access/unexpected-file-access.yaml
@@ -16,7 +16,7 @@ spec:
       unique_id: "data.event.Comm + '_' + data.event.FullPath"
       rule_expression:
         - event_type: "open"
-          expression: "!data.profile_checks.open_dynamic_path"
+          expression: "!ap.was_path_opened(data.event.Event.CommonData.Runtime.ContainerID, data.event.FullPath)"
     profile_dependency: 0
     severity: 1
     support_policy: false
