Adding some rules and fixes
Signed-off-by: Amit Schendel <amitschendel@gmail.com>

--- a/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
+++ b/pkg/rules/r1010-symlink-created-over-sensitive-file/symlink-created-over-sensitive-file.yaml
@@ -21,6 +21,5 @@ spec:
     severity: 1
     support_policy: true
     tags:
-      - "files"
-      - "malicious"
+      - "anomaly"
       - "symlink" 
