Adding ebpf rule
Signed-off-by: Amit Schendel <amitschendel@gmail.com>

--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -108,6 +108,22 @@ spec:
         - "exec"
         - "network"
         - "anomaly"
+    - name: "eBPF Program Load"
+      enabled: true
+      id: "R0009"
+      description: "Detecting eBPF program load."
+      expressions:
+        message: "'bpf system call executed in ' + data.event.Event.CommonData.K8s.BasicK8sMetadata.ContainerName"
+        unique_id: "data.event.Comm + '_' + data.event.SyscallName"
+        rule_expression:
+          - event_type: "syscall"
+            expression: "data.event.SyscallName == 'bpf' && !ap.was_syscall_used(data.event.Event.CommonData.Runtime.ContainerID, data.event.SyscallName)"
+      profile_dependency: 1
+      severity: 1
+      support_policy: false
+      tags:
+        - "syscall"
+        - "ebpf" 
     - name: "Symlink Created Over Sensitive File"
       enabled: true
       id: "R1010"
