--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -119,11 +119,27 @@ spec:
           - event_type: "syscall"
             expression: "data.event.SyscallName == 'bpf' && !ap.was_syscall_used(data.event.Event.CommonData.Runtime.ContainerID, data.event.SyscallName)"
       profile_dependency: 1
-      severity: 1
+      severity: 5
       support_policy: false
       tags:
         - "syscall"
         - "ebpf" 
+    - name: "Unexpected Sensitive File Access"
+      enabled: true
+      id: "R0010"
+      description: "Detecting access to sensitive files."
+      expressions:
+        message: "'Unexpected sensitive file access: ' + data.event.FullPath + ' by process ' + data.event.Comm"
+        unique_id: "data.event.Comm + '_' + data.event.FullPath"
+        rule_expression:
+          - event_type: "open"
+            expression: "data.event.FullPath.startsWith('/etc/shadow') && !ap.was_path_opened(data.event.Event.CommonData.Runtime.ContainerID, data.event.FullPath)"
+      profile_dependency: 1
+      severity: 5
+      support_policy: false
+      tags:
+        - "files"
+        - "anomaly"
     - name: "Symlink Created Over Sensitive File"
       enabled: true
       id: "R1010"
@@ -135,7 +151,7 @@ spec:
           - event_type: "symlink"
             expression: "(data.event.OldPath.startsWith('/etc/shadow') || data.event.OldPath.startsWith('/etc/sudoers')) && !ap.was_path_opened(data.event.Event.CommonData.Runtime.ContainerID, data.event.OldPath)"
       profile_dependency: 0
-      severity: 1
+      severity: 5
       support_policy: true
       tags:
         - "anomaly"
