--- a/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
+++ b/pkg/rules/r0007-kubernetes-client-executed/kubernetes-client-executed.yaml
@@ -20,7 +20,7 @@ spec:
         - event_type: "network"
           expression: "k8s.is_api_server_address(data.event.DstEndpoint.Addr) && !nn.was_address_in_egress(data.event.Event.CommonData.Runtime.ContainerID, data.event.DstEndpoint.Addr)"
     profile_dependency: 0
-    severity: 8 # High
+    severity: 5 # Medium
     support_policy: false
     tags:
       - "exec"
