--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -16,7 +16,7 @@ spec:
         unique_id: "data.event.Comm + '_' + string(data.event.Pid) + '_' + data.event.ExePath"
         rule_expression:
           - event_type: "exec"
-            expression: "!ap.was_executed(data.event.Event.CommonData.Runtime.ContainerID, data.event.ExePath)"
+            expression: "!ap.was_executed(data.event.Event.CommonData.Runtime.ContainerID, parse.get_exec_path(data.event.Args, data.event.Comm))"
       profile_dependency: 0
       severity: 1
       support_policy: false
@@ -103,11 +103,11 @@ spec:
         unique_id: "data.event.Comm + '_' + data.event.Pcomm"
         rule_expression:
           - event_type: "exec"
-            expression: "(data.event.Comm == 'kubectl' || data.event.ExePath.endsWith('/kubectl')) && !ap.was_executed(data.event.Event.CommonData.Runtime.ContainerID, data.event.ExePath)"
+            expression: "(data.event.Comm == 'kubectl' || data.event.ExePath.endsWith('/kubectl')) && !ap.was_executed(data.event.Event.CommonData.Runtime.ContainerID, parse.get_exec_path(data.event.Args, data.event.Comm))"
           - event_type: "network"
-            expression: "k8s.is_api_server_address(data.event.DstEndpoint.Addr) && !nn.was_address_in_egress(data.event.Event.CommonData.Runtime.ContainerID, data.event.DstEndpoint.Addr)"
+            expression: "data.event.PktType == 'OUTGOING' && k8s.is_api_server_address(data.event.DstEndpoint.Addr) && !nn.was_address_in_egress(data.event.Event.CommonData.Runtime.ContainerID, data.event.DstEndpoint.Addr)"
       profile_dependency: 0
-      severity: 8 # High
+      severity: 5 # Medium
       support_policy: false
       tags:
         - "exec"
@@ -148,6 +148,24 @@ spec:
         - "files"
         - "anomaly"
         - "applicationprofile"
+    - name: "Unexpected Egress Network Traffic"
+      enabled: true
+      id: "R0011"
+      description: "Detecting unexpected egress network traffic that is not whitelisted by application profile."
+      expressions:
+        message: "'Unexpected egress network communication to: ' + data.event.DstEndpoint.Addr + ':' + string(data.event.Port) + ' using ' + data.event.Proto + ' from: ' + data.event.Event.CommonData.K8s.BasicK8sMetadata.ContainerName"
+        unique_id: "data.event.DstEndpoint.Addr + '_' + string(data.event.Port) + '_' + data.event.Proto"
+        rule_expression:
+          - event_type: "network"
+            expression: "data.event.PktType == 'OUTGOING' && !net.is_private_ip(data.event.DstEndpoint.Addr) && !nn.was_address_in_egress(data.event.Event.CommonData.Runtime.ContainerID, data.event.DstEndpoint.Addr)"
+      profile_dependency: 0
+      severity: 5 # Medium
+      support_policy: false
+      tags:
+        - "whitelisted"
+        - "network"
+        - "anomaly"
+        - "networkprofile" 
     - name: "Symlink Created Over Sensitive File"
       enabled: true
       id: "R1010"
