--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -3,6 +3,8 @@ kind: Rules
 metadata:
   name: kubescape-rules
   namespace: kubescape
+  annotations:
+    kubescape.io/namespace: kubescape
   labels:
     app: kubescape
 spec:
