--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -214,6 +214,25 @@ spec:
         - "network"
         - "anomaly"
         - "networkprofile" 
+    - name: "Exec from malicious source"
+      enabled: true
+      id: "R1000"
+      description: "Detecting exec calls that are from malicious source like: /dev/shm, /proc/self"
+      expressions:
+        message: "'Execution from malicious source: ' + data.event.ExePath + ' in directory ' + data.event.Cwd"
+        unique_id: "data.event.Comm + '_' + data.event.ExePath + '_' + data.event.Pcomm"
+        rule_expression:
+          - event_type: "exec"
+            expression: >
+              (data.event.ExePath == '/dev/shm' || data.event.ExePath.startsWith('/dev/shm/')) ||
+              (data.event.Cwd == '/dev/shm' || data.event.Cwd.startsWith('/dev/shm/'))
+      profile_dependency: 2
+      severity: 8
+      support_policy: true
+      tags:
+        - "exec"
+        - "signature"
+        - "malicious" 
     - name: "Symlink Created Over Sensitive File"
       enabled: true
       id: "R1010"
