--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -13,7 +13,7 @@ spec:
     description: "Detecting unexpected access to service account token."
     expressions:
       message: "'Unexpected access to service account token: ' + data.event.FullPath + ' with flags: ' + data.event.Flags.join(',')"
-      unique_id: "data.event.Comm + '_' + data.event.FullPath"
+      unique_id: "data.event.Comm"
       rule_expression:
         - event_type: "open"
           expression: >
