--- a/rules-crd.yaml
+++ b/rules-crd.yaml
@@ -340,6 +340,23 @@ spec:
       - "unshare"
       - "anomaly"
       - "applicationprofile"
+  - name: "XMR Crypto Mining Detection"
+    enabled: true
+    id: "R1007"
+    description: "Detecting XMR Crypto Miners by randomx algorithm usage."
+    expressions:
+      message: "'XMR Crypto Miner process: (' + data.event.ExePath + ') executed'"
+      unique_id: "data.event.ExePath + '_' + data.event.Comm"
+      rule_expression:
+        - event_type: "randomx"
+          expression: "true"
+    profile_dependency: 2
+    severity: 10
+    support_policy: false
+    tags:
+      - "crypto"
+      - "miners"
+      - "malicious"
   - name: "Symlink Created Over Sensitive File"
     enabled: true
     id: "R1010"
