added ptrace, hardlink & ld_preload rules
Signed-off-by: Afek Berger <afekb@armosec.io>

--- a/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
+++ b/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
@@ -15,7 +15,7 @@ spec:
       message: "'Unexpected io_uring operation detected: (opcode=' + string(data.event.Opcode) + ') flags=0x' + string(data.event.Flags) + ' in ' + data.event.Comm + '.'"
       unique_id: "string(data.event.Opcode) + '_' + data.event.Comm"
       rule_expression:
-        - event_type: "io_uring"
+        - event_type: "iouring"
           expression: "true"
     profile_dependency: 0
     severity: 5
