--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -17,10 +17,10 @@ spec:
       rule_expression:
         - event_type: "open"
           expression: >
-            (data.event.FullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') || 
-             data.event.FullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') ||
-             data.event.FullPath.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') ||
-             data.event.FullPath.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount')) &&
+            ((data.event.FullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') && data.event.FullPath.endsWith('/token')) || 
+             (data.event.FullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && data.event.FullPath.endsWith('/token')) ||
+             (data.event.FullPath.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && data.event.FullPath.endsWith('/token')) ||
+             (data.event.FullPath.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && data.event.FullPath.endsWith('/token'))) &&
             !ap.was_path_opened_with_prefix(data.event.Event.CommonData.Runtime.ContainerID, '/run/secrets/kubernetes.io/serviceaccount') &&
             !ap.was_path_opened_with_prefix(data.event.Event.CommonData.Runtime.ContainerID, '/var/run/secrets/kubernetes.io/serviceaccount') &&
             !ap.was_path_opened_with_prefix(data.event.Event.CommonData.Runtime.ContainerID, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
