--- a/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
+++ b/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
@@ -13,7 +13,7 @@ spec:
     description: "Detects unexpected process launches that are not in the baseline"
     expressions:
       message: "'Unexpected process launched: ' + data.event.Comm + ' with PID ' + string(data.event.Pid)"
-      unique_id: "data.event.Comm + '_' + string(data.event.Pid) + '_' + data.event.ExePath"
+      unique_id: "data.event.Comm + '_' + data.event.ExePath"
       rule_expression:
         - event_type: "exec"
           expression: "!ap.was_executed(data.event.Event.CommonData.Runtime.ContainerID, parse.get_exec_path(data.event.Args, data.event.Comm))"
