--- a/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
+++ b/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
@@ -18,7 +18,8 @@ spec:
         - event_type: "exec"
           expression: >
             (data.event.ExePath == '/dev/shm' || data.event.ExePath.startsWith('/dev/shm/')) ||
-            (data.event.Cwd == '/dev/shm' || data.event.Cwd.startsWith('/dev/shm/'))
+            (data.event.Cwd == '/dev/shm' || data.event.Cwd.startsWith('/dev/shm/') || 
+            (parse.get_exec_path(data.event.Args, data.event.Comm).startsWith('/dev/shm/'))) 
     profile_dependency: 2
     severity: 8
     support_policy: true
