--- a/pkg/rules/r0011-unexpected-egress-network-traffic/unexpected-egress-network-traffic.yaml
+++ b/pkg/rules/r0011-unexpected-egress-network-traffic/unexpected-egress-network-traffic.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0011"
     description: "Detecting unexpected egress network traffic that is not whitelisted by application profile."
     expressions:
-      message: "'Unexpected egress network communication to: ' + data.event.DstEndpoint.Addr + ':' + string(data.event.Port) + ' using ' + data.event.Proto + ' from: ' + data.event.Event.CommonData.K8s.BasicK8sMetadata.ContainerName"
-      unique_id: "data.event.DstEndpoint.Addr + '_' + string(data.event.Port) + '_' + data.event.Proto"
+      message: "'Unexpected egress network communication to: ' + data.event.dst.addr + ':' + string(data.event.port) + ' using ' + data.event.proto + ' from: ' + data.event.k8s.containerName"
+      unique_id: "data.event.dst.addr + '_' + string(data.event.port) + '_' + data.event.proto"
       rule_expression:
         - event_type: "network"
-          expression: "data.event.PktType == 'OUTGOING' && !net.is_private_ip(data.event.DstEndpoint.Addr) && !nn.was_address_in_egress(data.event.Event.CommonData.Runtime.ContainerID, data.event.DstEndpoint.Addr)"
+          expression: "data.event.pktType == 'OUTGOING' && !net.is_private_ip(data.event.dst.addr) && !nn.was_address_in_egress(data.event.runtime.containerId, data.event.dst.addr)"
     profile_dependency: 0
     severity: 5 # Medium
     support_policy: false
