--- a/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
+++ b/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
@@ -12,14 +12,14 @@ spec:
     id: "R1000"
     description: "Detecting exec calls that are from malicious source like: /dev/shm, /proc/self"
     expressions:
-      message: "'Execution from malicious source: ' + data.event.ExePath + ' in directory ' + data.event.Cwd"
-      unique_id: "data.event.Comm + '_' + data.event.ExePath + '_' + data.event.Pcomm"
+      message: "'Execution from malicious source: ' + data.event.exepath + ' in directory ' + data.event.cwd"
+      unique_id: "data.event.comm + '_' + data.event.exepath + '_' + data.event.pcomm"
       rule_expression:
         - event_type: "exec"
           expression: >
-            (data.event.ExePath == '/dev/shm' || data.event.ExePath.startsWith('/dev/shm/')) ||
-            (data.event.Cwd == '/dev/shm' || data.event.Cwd.startsWith('/dev/shm/') || 
-            (parse.get_exec_path(data.event.Args, data.event.Comm).startsWith('/dev/shm/'))) 
+            (data.event.exepath == '/dev/shm' || data.event.exepath.startsWith('/dev/shm/')) ||
+            (data.event.cwd == '/dev/shm' || data.event.cwd.startsWith('/dev/shm/') || 
+            (parse.get_exec_path(data.event.args, data.event.comm).startsWith('/dev/shm/'))) 
     profile_dependency: 2
     severity: 8
     support_policy: true
