--- a/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
+++ b/pkg/rules/r1030-unexpected-io_uring-operation/unexpected-io_uring-operation.yaml
@@ -12,8 +12,8 @@ spec:
     id: "R1030"
     description: "Detects io_uring operations that were not recorded during the initial observation period, indicating potential unauthorized activity."
     expressions:
-      message: "'Unexpected io_uring operation detected: (opcode=' + string(data.event.Opcode) + ') flags=0x' + string(data.event.Flags) + ' in ' + data.event.Comm + '.'"
-      unique_id: "string(data.event.Opcode) + '_' + data.event.Comm"
+      message: "'Unexpected io_uring operation detected: (opcode=' + string(data.event.opcode) + ') flags=0x' + (has(data.event.flags) ? string(data.event.flags) : '0') + ' in ' + data.event.comm + '.'"
+      unique_id: "string(data.event.opcode) + '_' + data.event.comm"
       rule_expression:
         - event_type: "iouring"
           expression: "true"
